--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#fff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,
                                  maximum-scale=1.0, user-scalable=no">
-  <title>dlzs2515.github.io</title>
+  <title>Error 404</title>
   <style>
 
 a {
@@ -1506,4 +1506,4 @@ let showingDetails=false;let lastData=null;function toggleHelpBox(){showingDetai
   </div>
 
 
-<script>var loadTimeDataRaw = {"details":"详情","errorCode":"HTTPS ERROR 404","fontfamily":"'Segoe UI',Arial,'Microsoft Yahei',sans-serif","fontfamilyMd":"'Segoe UI',Arial,'Microsoft Yahei',sans-serif","fontsize":"75%","heading":{"msg":"该网页无法正常运作"},"hideDetails":"隐藏详细信息","iconClass":"icon-generic","language":"zh","reloadButton":{"msg":"重新加载","reloadUrl":"./"},"suggestionsDetails":[],"suggestionsSummaryList":[],"summary":{"msg":"\u003Cstrong>dlzs2515.github.io\u003C/strong> 目前无法处理此请求。"},"textdirection":"ltr","title":"dlzs2515.github.io"};</script></body></html>
+<script>var loadTimeDataRaw = {"details":"详情","errorCode":"Error SB","fontfamily":"'Segoe UI',Arial,'Microsoft Yahei',sans-serif","fontfamilyMd":"'Segoe UI',Arial,'Microsoft Yahei',sans-serif","fontsize":"75%","heading":{"msg":"该网页服务器正在维护中"},"hideDetails":"隐藏详细信息","iconClass":"icon-generic","language":"zh","reloadButton":{"msg":"重新加载","reloadUrl":"./"},"suggestionsDetails":[],"suggestionsSummaryList":[],"summary":{"msg":"\u003Cstrong>BUG!\u003C/strong> 目前正在修复中！"},"textdirection":"ltr","title":"./404.html"};</script></body></html>
